# tribe-v2-emotion-eval

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  brain_formatter.py  decision_gate.txt  evaluate.py  generate_audio_elevenlabs.py  generate_emotional_audio.py  linkedin_post.md  load_mosei.py  mosei_samples.json  pyproject.toml  results_summary.csv  results_summary_emotional.csv  roi_classifier.py  roi_classifier_results.txt  tribe_inference.py  tribe_inference_emotional.py  visualize_results.py
